# flight-calculator

./: .gitattributes  .gitignore  HLA-tool.py  HLA-tool.spec  README.md  input.xlsx  main.py  pyproject.toml
.github/workflows/: build.yml  cicd.yml  format-check.yml  release.yml
src/: analysis.py  calculator.py  flights.py  input.py  output.py  util.py
src/templates/: report.md  report.typ  test_advices.json
tests/: test_analysis.py  test_calculator.py  test_flights.py
tests/data/: one_way_flights.json  round_trip_flights.json
