[project]
name = "flight-calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "airportsdata>=20250523",
    "babel>=2.17.0",
    "fast-flights[local]>=2.2",
    "numpy>=2.3.0",
    "odfpy>=1.4.1",
    "pandas>=2.3.0",
    "pathlib>=1.0.1",
    "pendulum>=3.1.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.4.0",
]
[tool.isort]
profile = "black"
