[project]
name = "flight-calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "babel>=2.17.0",
    "currencyconverter>=0.18.7",
    "fast-flights[local]>=2.2",
    "jinja2>=3.1.6",
    "markdown>=3.8.2",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "odfpy>=1.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pendulum>=3.1.0",
    "pydantic>=2.11.7",
    "pyinstaller>=6.14.1",
    "weasyprint>=66.0",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.4.0",
]
[tool.isort]
profile = "black"
